Fix bug that led to last immersive image overlapping the footer

--- a/resources/styles/metro-cascade-template.css
+++ b/resources/styles/metro-cascade-template.css
@@ -551,20 +551,30 @@
 	/*						SECTION: STANDARD METRO FOOTER						*/
 	/*------------------------------------------------------------------------*/
 	
+	.met-section {
+		position: relative;
+    	width: 100%;
+    	min-height: 100%;
+    	z-index: 3;
+    }
+    
 	.met-footer-wrapper {
 		width: 100%; 
 		background-color: #00385c; 
 		min-height: 100px; 
 		padding: 40px; 
 		color: #ffffff;
+		z-index: 33;
 	}
 	
 	.met-signature-wrapper {
-		margin-top: 150px;
+		background-color: #ffffff;
 		vertical-align: bottom;
+		z-index: 33;
 	}
 	
 	#metro-illustrated-strip {
+		padding-top: 150px;
 		vertical-align: bottom;
 	}
 	
@@ -675,7 +685,7 @@
     }
 
 	/* mobile response for footer: turn into a block */
-	@media (max-width: 650px) {
+	@media all and (max-width: 650px) {
 		.met-footer-row {
 			display: block;
 		}
@@ -836,8 +846,8 @@
 
 @media all and (max-width: 700px) {
 	
-	.met-signature-wrapper {
-		margin-top: 75px;	
+	#metro-illustrated-strip {
+		padding-top: 75px;	
 	}
 	
 	#metro-illustrated-strip img {
